--- a/KnowItAll/PollPage.storyboard
+++ b/KnowItAll/PollPage.storyboard
@@ -346,7 +346,9 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Atq-az-cUJ">
                                         <rect key="frame" x="8" y="26" width="48" height="30"/>
-                                        <state key="normal" title="Cancel"/>
+                                        <state key="normal" title="Cancel">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="cancelPressed:" destination="r9M-wR-5sf" eventType="touchUpInside" id="WyJ-hJ-MX7"/>
                                         </connections>
