--- a/KnowItAll/Search.storyboard
+++ b/KnowItAll/Search.storyboard
@@ -331,25 +331,25 @@
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qDM-6s-kK7" id="yWA-1D-u6J">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06E-kN-HA6">
-                                                    <rect key="frame" x="15" y="6" width="313" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="Hhb-GB-ysC"/>
-                                                    </constraints>
-                                                    <state key="normal" title="Button"/>
-                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssO-5x-OWY">
+                                                    <rect key="frame" x="20" y="12" width="313" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="06E-kN-HA6" secondAttribute="trailing" constant="15" id="2Le-tS-OjM"/>
-                                                <constraint firstItem="06E-kN-HA6" firstAttribute="leading" secondItem="yWA-1D-u6J" secondAttribute="leading" constant="15" id="54u-O9-OcJ"/>
-                                                <constraint firstItem="06E-kN-HA6" firstAttribute="centerY" secondItem="yWA-1D-u6J" secondAttribute="centerY" id="Pcy-Uy-Yv0"/>
+                                                <constraint firstItem="ssO-5x-OWY" firstAttribute="bottom" secondItem="yWA-1D-u6J" secondAttribute="bottomMargin" constant="1" id="X6N-Eo-QUg"/>
+                                                <constraint firstItem="ssO-5x-OWY" firstAttribute="top" secondItem="yWA-1D-u6J" secondAttribute="topMargin" constant="1" id="Y4z-Q5-r7b"/>
+                                                <constraint firstItem="ssO-5x-OWY" firstAttribute="trailing" secondItem="yWA-1D-u6J" secondAttribute="trailingMargin" constant="5" id="d0s-o6-jzy"/>
+                                                <constraint firstItem="ssO-5x-OWY" firstAttribute="leading" secondItem="yWA-1D-u6J" secondAttribute="leadingMargin" constant="5" id="fZa-pq-Eam"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="option" destination="06E-kN-HA6" id="rbz-63-qBm"/>
+                                            <outlet property="option" destination="ssO-5x-OWY" id="1RN-ge-LyU"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
